# index_drop_data_puller

./: .replit  app.py  data_fetch_config.py  debugging.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  hidden_sidebar.css
assets/: tailwind.css
attached_assets/: Pasted-Aggregate-Return-Analysis-After-Market-Drops-TypeError-argument-of-type-NoneType-is-not-iterable-1743801471441.txt  Pasted-AttributeError-float-object-has-no-attribute-name-Traceback-File-home-runner-workspace-py-1743801357197.txt  Pasted-Comprehensive-Analysis-of-the-S-P-500-Market-Drop-Analyzer-Overview-The-S-P-500-Market-Drop-Analyz-1743800352976.txt  Pasted-Connection-failed-with-status-503-and-response-DOCTYPE-html-html-lang-en-head-tit-1744208641935.txt  Pasted-KeyError-0-Traceback-File-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-strea-1744047262559.txt  Pasted-Market-Drop-Return-Database-with-Aggregates-ValueError-Invalid-format-specifier-function-show-hi-1743965846594.txt  Pasted-Market-Drop-Return-Database-with-Aggregates-ValueError-Unknown-format-code-f-for-object-of-type--1743961021930.txt  Pasted-TypeError-Invalid-comparison-between-dtype-datetime64-ns-and-date-Traceback-File-home-runner--1743801602347.txt  Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-download-button-elements-with-the-s-1747769933741.txt
pages/: current_market.py  drop_events.py  historical_performance.py  ml_predictions.py  ml_predictions_new.py
utils/: alternative_data_source.py  data_fetcher.py  event_detection.py  ml_models.py  ml_models_new.py  sample_data.py  (+3 more)
