[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas-datareader>=0.10.0",
    "pandas>=2.2.3",
    "pandas-ta>=0.3.14b0",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
    "yfinance==0.2.31",
]
